# loon-telegram-adblocker-

./: .env.example  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.txt  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  INSTALLATION.md  INSTALLATION_MEITUAN.md  IOS_NATIVE_SUPPORT_FINAL.md  LICENSE  MEITUAN_PLUGIN_SUMMARY.md  MeituanAdBlock.plugin  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_MEITUAN.md  QUICK_REFERENCE_iOS.md  QUICK_TEST.md  QUICK_TEST_TELEGRAM_IOS.md  README.md  README_IOS_NATIVE.md  README_MEITUAN.md  REWRITE_SUMMARY.md  REWRITE_SUMMARY_TELEGRAM.md  TECHNICAL_RESEARCH.md  TelegramAdBlock.plugin  UPDATE_SUMMARY_IOS.md  VERIFICATION.md  docker-compose.yml  meituan-adblocker.js  pyproject.toml  requirements-dev.txt  requirements.txt  telegram-adblocker.js
app/: __init__.py  compose.py  main.py  media.py  metadata.py  script_gen.py  subtitles.py  thumbnail.py  topics.py  tts.py  uploader.py  utils.py
config/: config.yaml
config/prompts/: script_en.txt  script_zh.txt
examples/: README.md  advanced-config.plugin  local-config.plugin  meituan-local-config.plugin
rules/: meituan-ads.list  telegram-ads.list
tests/: test_compose.py  test_metadata.py  test_script_gen.py  test_subtitles.py
