[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-automation"
version = "0.1.0"
description = "Automated YouTube Shorts generation pipeline"
authors = [{ name = "Automation Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=1.0.3",
    "Pillow>=9.5.0",
    "pydub>=0.25.1",
    "srt>=3.5.3",
    "requests>=2.31.0",
    "google-api-python-client>=2.111.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "pytrends>=4.9.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
